--- a/index.html
+++ b/index.html
@@ -226,15 +226,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="dropdown p-lg-2 m-lg-1">
-                    <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Contact
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="./pages/portofoliowebdev.html">Portofolio Webdev</a></li>
-                      <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="./pages/portofolioads.html">Portofolio Ads</a></li>
-                    </ul>
-                  </div>
+                  <li class="nav-item p-3">
+                    <a class="nav-link" href="./pages/blog.html">Blog</a>
+                  </li>
+                  <li class="nav-item p-3">
+                    <a class="nav-link" href="./pages/contact.html">Contact</a>
+                  </li>
                   <li class="nav-item p-3">
                     <a class="btn btn-app-request" type="submit">Konsultasi sekarang</a>
                   </li>
@@ -274,11 +271,9 @@
             <div class="container margin-top-web-1">
                 <div class="row">
                     <div class="col-md-6" data-aos="fade-up">
-                        <div class="">
-                            <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Lorem ipsum dolor sit amet <br> consectetur. Commodo 👋</p>
-                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Lorem ipsum dolor sit amet consectetur. Lorem nunc </p>
-                        </div>
-                        <div class="">
+                        <div class="text-center-mobile">
+                            <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Ayo lakukan perubahan baru <br> pada bisnis digital sekarang !</p>
+                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Creative Solution, Creative Result</p>
                             <button class="btn btn-home mb-3"><a class="link-home" href="">Konsultasikan sekarang</a></button>
                         </div>
                     </div>
@@ -305,9 +300,9 @@
                 </div>
               </div>
               <div class="col-lg-6" data-aos="fade-up">
-                <div class="group-our-team p-2">
-                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Get to know us!</p>
-                    <h6 class="app-primary-dua-0 f-w-700 mb-4">Our Team, Our Family 😊</h6>
+                <div class="group-our-team text-center-mobile p-2">
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Ketahui kami lebih jauh</p>
+                    <h6 class="app-primary-dua-0 f-w-700 mb-4">Tim kami, Keluarga kami 😊</h6>
                     <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Halo! Kami adalah agensi branding dan digital. Kami percaya bahwa "ide-ide hebat"
                        dapat diwujudkan sebagai kunci keberhasilan. Jadi kami di sini untuk membantu Anda "menyapa" pasar potensial Anda 
                        dan membangun merek Anda lebih menonjol daripada yang lain. Mari bekerjasama bersama kami dan lihatlah bagaimana 
@@ -322,7 +317,7 @@
                     <div class="m-4 align-middle">
                       <div class="group-image-hero">
                         <div class="count-image-1">
-                          <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                          <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                         </div>
                       </div>
                     </div>
@@ -431,7 +426,7 @@
               <div class="col-md-12" data-aos="fade-up">
                 <div class="text-center pt-5 mb-5">
                   <h6 class="f-w-700 text-white mb-3">Layanan Kami</h6>
-                  <p class="paragraph-text-one text-white f-w-400">Gunakan jasa layanan spesialis kami <br> untuk mengembangkan business anda</p>
+                  <p class="paragraph-text-one text-white f-w-400">Gunakan jasa layanan spesialis kami untuk <br> mengembangkan business anda</p>
                 </div>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 mb-3" data-aos="fade-up">
@@ -550,21 +545,21 @@
             <div class="row">
               <div class="col-md-12" data-aos="fade-up">
                 <div  class="text-center mb-5">
-                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Portfolio</h6>
+                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Karya Kami</h6>
                   <p class="paragraph-text-one app-primary-dua-0 f-w-400">Hasil rekap kerja kami bersama tim</p>
                 </div>
               </div>
               <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
                 <div class="card-portfolio mb-3">
-                  <img src="./image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                  <img src="./image/home/image-karya-kami-1.png" class="img-portfolio" alt="">
                   <div class="card-bdoy">
                     <div class="group-text-portfolio p-3">
-                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Social Media Management</p>
                       <a href="#" class="link-read-more paragraf-text-tree">
                         <div class="group-read-more-in-blog">
                           <div class="text-read">
-                            <span>Read More</span>
+                            <span>Selengkapnya</span>
                           </div>
                           <div class="icon-read">
                             <i class='bx bx-right-arrow-alt'></i>
@@ -577,15 +572,15 @@
               </div>
               <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
                 <div class="card-portfolio mb-3">
-                  <img src="./image/home/img-portfolio-2.png" class="img-portfolio" alt="">
+                  <img src="./image/home/image-karya-kami-2.png" class="img-portfolio" alt="">
                   <div class="card-bdoy">
                     <div class="group-text-portfolio p-3">
-                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Holystrom </p>
+                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
                       <a href="#" class="link-read-more paragraf-text-tree">
                         <div class="group-read-more-in-blog">
                           <div class="text-read">
-                            <span>Read More</span>
+                            <span>Selengkapnya</span>
                           </div>
                           <div class="icon-read">
                             <i class='bx bx-right-arrow-alt'></i>
@@ -598,15 +593,15 @@
               </div>
               <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up">
                 <div class="card-portfolio mb-3">
-                  <img src="./image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                  <img src="./image/home/image-karya-kami-3.png" class="img-portfolio" alt="">
                   <div class="card-bdoy">
                     <div class="group-text-portfolio p-3">
-                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                      <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Company Profile</p>
+                      <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Web Development</p>
                       <a href="#" class="link-read-more paragraf-text-tree">
                         <div class="group-read-more-in-blog">
                           <div class="text-read">
-                            <span>Read More</span>
+                            <span>Selengkapnya</span>
                           </div>
                           <div class="icon-read">
                             <i class='bx bx-right-arrow-alt'></i>
@@ -632,7 +627,7 @@
             <div class="row">
               <div class="col-md-12" data-aos="fade-up">
                 <div class="text-center mb-5">
-                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Our Clients</h6>
+                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Pelanggan kami</h6>
                   <p class="paragraph-text-one app-primary-dua-0 f-w-400">Mereka adalah yang berlanggan bersama kami</p>
                 </div>
               </div>
@@ -659,8 +654,8 @@
             <div class="row">
               <div class="col-md-12" data-aos="fade-up">
                 <div class="text-center mb-5">
-                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Testimonial</h6>
-                  <p class="paragraph-text-one app-primary-dua-0 f-w-400">Berikut ini adalah kepuasan client kami</p>
+                  <h6 class="app-primary-dua-0 f-w-700 mb-3">Penilaian pelanggan</h6>
+                  <p class="paragraph-text-one app-primary-dua-0 f-w-400">Berikut ini adalah kepuasan pelanggan kami</p>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12" data-aos="fade-up">
@@ -1002,10 +997,10 @@
                 </div>
               </div>
               <div class="col-md-6" data-aos="fade-up">
-                <div class="p-lg-5 mb-5">
-                  <div class="mb-3">
-                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Consultation Our Team</p>
-                    <h6 class="app-primary-dua-0 f-w-700">Let's Start Talking With us 😊</h6>
+                <div class="p-lg-3 mb-5">
+                  <div class="text-center-mobile mb-3">
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Konsultasi tim kami</p>
+                    <h6 class="app-primary-dua-0 f-w-700">Ayo mulai lakukan perubahan 😊</h6>
                   </div>
                   <div class="mb-5">
                     <div class="card-contact mb-3">
@@ -1030,12 +1025,12 @@
                       <div class="m-4 align-middle">
                         <div class="group-image-hero">
                           <div class="count-image-1">
-                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                            <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                           </div>
                         </div>
                       </div>
                       <div class="m-3 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                        <p class="paragraph-text-three app-base-40 mb-0">Penilaian pelanggan</p>
                       </div>
                       <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
