--- a/pages/ads.html
+++ b/pages/ads.html
@@ -70,18 +70,12 @@
               <!-- <li class="nav-item p-3">
                 <a class="nav-link link-active" href="#">Layanan</a>
               </li> -->
-              <div class="dropdown p-lg-2 m-lg-1">
-                <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Contact
-                </button>
-                <ul class="dropdown-menu">
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofoliowebdev.html">Portofolio Webdev</a></li>
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofolioads.html">Portofolio Ads</a></li>
-                </ul>
-              </div>
-              <!-- <li class="nav-item p-3">
-                <a class="nav-link" href="#">Contact</a>
-              </li> -->
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/contact.html">Contact</a>
+              </li>
               <li class="nav-item p-3">
                 <a class="btn btn-app-request" type="submit">Konsultasi sekarang</a>
               </li>
