--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -71,18 +71,12 @@
               <!-- <li class="nav-item p-3">
                 <a class="nav-link" href="#">Layanan</a>
               </li> -->
-              <div class="dropdown p-lg-2 m-lg-1">
-                <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Contact
-                </button>
-                <ul class="dropdown-menu">
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofoliowebdev.html">Portofolio Webdev</a></li>
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofolioads.html">Portofolio Ads</a></li>
-                </ul>
-              </div>
-              <!-- <li class="nav-item p-3">
-                <a class="nav-link" href="#">Contact</a>
-              </li> -->
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/contact.html">Contact</a>
+              </li>
               <li class="nav-item p-3">
                 <a class="btn btn-app-request" type="submit">Konsultasi sekarang</a>
               </li>
@@ -100,13 +94,11 @@
             <div class="container margin-top-web-1">
                 <div class="row">
                     <div class="col-md-6" data-aos="fade-up">
-                        <div class="">
-                            <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Lorem ipsum dolor sit amet <br> consectetur. Commodo</p>
-                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Lorem ipsum dolor sit amet consectetur. Lorem nunc </p>
-                        </div>
-                        <div class="">
+                        <div class="text-center-mobile">
+                            <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Kenali tim profesional <br> kami lebih jauh</p>
+                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Creative Solution, Creative Result</p>
                             <button class="btn btn-home-tentang-portofolio-layanan mb-3"><a class="link-home" href="">Konsultasikan sekarang</a></button>
-                        </div>
+                          </div>
                     </div>
                     <div class="col-md-6">
                       <div class="grup-tentang-home">
@@ -133,9 +125,9 @@
                 </div>
               </div>
               <div class="col-lg-6" data-aos="fade-up">
-                <div class="group-our-team p-2">
-                  <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Get to know us !</p>
-                  <h6 class="app-primary-dua-0 f-w-700 mb-4">Our Team, Our Family 😊</h6>
+                <div class="group-our-team text-center-mobile p-2">
+                  <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Ketahui kami lebih jauh</p>
+                  <h6 class="app-primary-dua-0 f-w-700 mb-4">Tim kami, Keluarga kami 😊</h6>
                   <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Halo! Kami adalah agensi branding dan digital. Kami percaya bahwa "ide-ide hebat"
                      dapat diwujudkan sebagai kunci keberhasilan. Jadi kami di sini untuk membantu Anda "menyapa" pasar potensial Anda 
                      dan membangun merek Anda lebih menonjol daripada yang lain. Mari bekerjasama bersama kami dan lihatlah bagaimana 
@@ -150,12 +142,12 @@
                   <div class="m-4 align-middle">
                     <div class="group-image-hero">
                       <div class="count-image-1">
-                        <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                        <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                       </div>
                     </div>
                   </div>
                   <div class="m-3 align-middle">
-                    <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                    <p class="paragraph-text-three app-base-40 mb-0">Penilaian pelanggan</p>
                   </div>
                   <div class="m-2 align-middle">
                     <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -258,8 +250,8 @@
             <div class="row">
               <div class="col-md-12" data-aos="fade-up">
                 <div class="text-center mb-5 pt-5">
-                  <h6 class="text-white f-w-700 mb-3">Lorem ipsum</h6>
-                  <h6 class="text-white f-w-400">Faust Aegis Network?</h6>
+                  <h6 class="text-white f-w-700 mb-3">Keunggulan kami</h6>
+                  <p class="text-white paragraph-text-one f-w-400">Lakukan perubahan mu</p>
                 </div>
               </div>
               <div class="col-lg-4 col-sm-6 col-md-6 mb-3" data-aos="fade-up" data-aos-duration="1000">
@@ -304,8 +296,8 @@
                 <div class="row">
                     <div class="col-md-12" data-aos="fade-up">
                         <div class="text-center mb-5">
-                            <h6 class="app-primary-dua-0 f-w-700">Our Team</h6>
-                            <p class="paragraph-text-one app-primary-dua-0 f-w-400">This is my team fan who likes to make fun</p>
+                            <h6 class="app-primary-dua-0 f-w-700 mb-4">Tim kami</h6>
+                            <p class="paragraph-text-one app-primary-dua-0 f-w-400">Ayo kenali lebih jauh </p>
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="100">
@@ -341,7 +333,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="700">
+                    <!-- <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="700">
                         <div class="card-our-team-tentang">
                           <img src="../image/tentang/img-card-tentang-4.png" alt="">
                             <div class="card-body">
@@ -351,7 +343,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="100">
                         <div class="card-our-team-tentang">
                           <img src="../image/tentang/img-team-defri.png" alt="">
@@ -363,7 +355,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="300">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="300">
                         <div class="card-our-team-tentang">
                           <img src="../image/tentang/img-team-bayu.png" alt="">
                             <div class="card-body">
@@ -374,7 +366,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="500">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="500">
                         <div class="card-our-team-tentang">
                           <img src="../image/tentang/img-team-hazhiah.png" alt="">
                             <div class="card-body">
@@ -385,7 +377,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="700">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="700">
                         <div class="card-our-team-tentang">
                           <img src="../image/tentang/img-team-dodi.png" alt="">
                             <div class="card-body">
@@ -417,10 +409,10 @@
                 </div>
               </div>
               <div class="col-md-6" data-aos="fade-up">
-                <div class="p-lg-5 mb-5">
-                  <div class="mb-3">
-                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Consultation Our Team</p>
-                    <h6 class="app-primary-dua-0 f-w-700">Let's Start Talking With us 😊</h6>
+                <div class="p-lg-3 mb-5">
+                  <div class="text-center-mobile mb-3">
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Konsultasi tim kami</p>
+                    <h6 class="app-primary-dua-0 f-w-700">Ayo mulai lakukan perubahan 😊</h6>
                   </div>
                   <div class="mb-5">
                     <div class="card-contact mb-3">
@@ -445,12 +437,12 @@
                       <div class="m-4 align-middle">
                         <div class="group-image-hero">
                           <div class="count-image-1">
-                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                            <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                           </div>
                         </div>
                       </div>
                       <div class="m-3 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                        <p class="paragraph-text-three app-base-40 mb-0">Penilaian pelanggan</p>
                       </div>
                       <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -542,7 +534,7 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
                 <div class="text-center">
