--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -70,18 +70,12 @@
               <!-- <li class="nav-item p-3">
                 <a class="nav-link" href="#">Layanan</a>
               </li> -->
-              <div class="dropdown p-lg-2 m-lg-1">
-                <button class="btn btn-transparent nav-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Contact
-                </button>
-                <ul class="dropdown-menu">
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item p-1 m-1" href="../pages/portofoliowebdev.html">Portofolio Webdev</a></li>
-                  <li class="nav-item p-1 m-1"><a class="nav-link dropdown-item" href="../pages/portofolioads.html">Portofolio Ads</a></li>
-                </ul>
-              </div>
-              <!-- <li class="nav-item p-3">
-                <a class="nav-link" href="#">Contact</a>
-              </li> -->
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/blog.html">Blog</a>
+              </li>
+              <li class="nav-item p-3">
+                <a class="nav-link" href="../pages/contact.html">Contact</a>
+              </li>
               <li class="nav-item p-3">
                 <a class="btn btn-app-request" type="submit">Konsultasi sekarang</a>
               </li>
@@ -99,7 +93,7 @@
             <div class="container margin-top-web-1">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="grup-portofolio-home">
+                        <div class="grup-portofolio-home mb-5">
                           <div class="">
                             <script type="text-json"></script>
                             <lottie-player src="https://lottie.host/501b247a-8076-4788-94e3-c9127e92de49/6Z71iKbNaY.json"  background="transparent"  speed="1"  style="width: 100%; height: 100%;"  loop  autoplay></lottie-player>
@@ -108,13 +102,11 @@
                           <!-- <img src="./image/home/background-home.png" class="img-fluid" alt=""> -->
                       </div>
                     <div class="col-md-6" data-aos="fade-up">
-                        <div class="">
-                            <p class="heading-text-one-40 app-base-40 f-w-700 mb-5">Lorem ipsum dolor sit amet <br> consectetur. Commodo</p>
-                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Lorem ipsum dolor sit amet consectetur. Lorem nunc </p>
-                        </div>
-                        <div class="">
+                        <div class="text-center-mobile">
+                            <h4 class="heading-text-one-40 app-base-40 f-w-700 mb-5">Karya kami adalah <br> kreatifitas kami !</h4>
+                            <p class="paragraph-text-two app-base-40 f-w-400 mb-5">Creative Solution, Creative Result</p>
                             <button class="btn btn-home-tentang-portofolio-layanan mb-3"><a class="link-home" href="">Konsultasikan sekarang</a></button>
-                        </div>
+                          </div>
                     </div>
                 </div>
             </div>
@@ -142,11 +134,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="1000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-1.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Social Media Management</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -163,11 +155,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="2000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-2.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-1.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Social Media Management</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -184,11 +176,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="3000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-1.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Social Media Management</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -205,11 +197,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="1000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-2.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Holystrom </p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -226,11 +218,11 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="2000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-3.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Go Ticket </p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -247,11 +239,74 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="3000">
                           <div class="card-portfolio mb-3">
-                            <img src="../image/home/img-portfolio-1.png" class="img-portfolio" alt="">
+                            <img src="../image/portofolio/image-portofolio-4.png" class="img-portfolio" alt="">
                             <div class="card-bdoy">
                               <div class="group-text-portfolio p-3">
-                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Lorem ipsum</p>
-                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Lorem ipsum sit dolor amet</p>
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">UWWWO</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
+                                <a href="#" class="link-read-more paragraf-text-tree">
+                                  <div class="group-read-more-in-blog">
+                                    <div class="text-read">
+                                      <span>Read More</span>
+                                    </div>
+                                    <div class="icon-read">
+                                      <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="3000">
+                          <div class="card-portfolio mb-3">
+                            <img src="../image/portofolio/image-portofolio-5.png" class="img-portfolio" alt="">
+                            <div class="card-bdoy">
+                              <div class="group-text-portfolio p-3">
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Weding Invitation </p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Web Development</p>
+                                <a href="#" class="link-read-more paragraf-text-tree">
+                                  <div class="group-read-more-in-blog">
+                                    <div class="text-read">
+                                      <span>Read More</span>
+                                    </div>
+                                    <div class="icon-read">
+                                      <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="3000">
+                          <div class="card-portfolio mb-3">
+                            <img src="../image/portofolio/image-portofolio-6.png" class="img-portfolio" alt="">
+                            <div class="card-bdoy">
+                              <div class="group-text-portfolio p-3">
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Company Profile</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Web Development</p>
+                                <a href="#" class="link-read-more paragraf-text-tree">
+                                  <div class="group-read-more-in-blog">
+                                    <div class="text-read">
+                                      <span>Read More</span>
+                                    </div>
+                                    <div class="icon-read">
+                                      <i class='bx bx-right-arrow-alt'></i>
+                                    </div>
+                                  </div>
+                                </a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-lg-4 mb-3" data-aos="fade-up" data-aos-duration="3000">
+                          <div class="card-portfolio mb-3">
+                            <img src="../image/portofolio/image-portofolio-7.png" class="img-portfolio" alt="">
+                            <div class="card-bdoy">
+                              <div class="group-text-portfolio p-3">
+                                <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Company Profile</p>
+                                <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Web Development</p>
                                 <a href="#" class="link-read-more paragraf-text-tree">
                                   <div class="group-read-more-in-blog">
                                     <div class="text-read">
@@ -307,10 +362,10 @@
                 </div>
               </div>
               <div class="col-md-6" data-aos="fade-up">
-                <div class="p-lg-5 mb-5">
-                  <div class="mb-3">
-                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Consultation Our Team</p>
-                    <h6 class="app-primary-dua-0 f-w-700">Let's Start Talking With us 😊</h6>
+                <div class="p-lg-3 mb-5">
+                  <div class="text-center-mobile mb-3">
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Konsultasi tim kami</p>
+                    <h6 class="app-primary-dua-0 f-w-700">Ayo mulai lakukan perubahan 😊</h6>
                   </div>
                   <div class="mb-5">
                     <div class="card-contact mb-3">
@@ -335,12 +390,12 @@
                       <div class="m-4 align-middle">
                         <div class="group-image-hero">
                           <div class="count-image-1">
-                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                            <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                           </div>
                         </div>
                       </div>
                       <div class="m-3 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                        <p class="paragraph-text-three app-base-40 mb-0">Penilaian pelanggan</p>
                       </div>
                       <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -432,7 +487,7 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
                 <div class="text-center">
