--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
