--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -257,7 +257,7 @@
               <div class="col-lg-4 col-sm-6 col-md-6 mb-3" data-aos="fade-up" data-aos-duration="1000">
                 <div class="text-center">
                   <div class="">
-                    <img src="../image/tentang/icon-tentang-reliability.png" class="mb-4" alt="">
+                    <img src="../image/tentang/icon-tentang-reliability.png" class="img-tentang-keunggulan mb-4" alt="">
                   </div>
                   <div class="">
                     <p class="heading-text-three text-white f-w-700">Reliability</p>
@@ -267,7 +267,7 @@
               <div class="col-lg-4 col-sm-6 col-md-6 mb-3" data-aos="fade-up" data-aos-duration="2000">
                 <div class="text-center">
                   <div class="">
-                    <img src="../image/tentang/icon-tentang-relationship.png" class="mb-4" alt="">
+                    <img src="../image/tentang/icon-tentang-relationship.png" class="img-tentang-keunggulan mb-4" alt="">
                   </div>
                   <div class="">
                     <p class="heading-text-three text-white f-w-700">Relationship</p>
@@ -277,7 +277,7 @@
               <div class="col-lg-4 col-sm-6 col-md-6 mb-5" data-aos="fade-up" data-aos-duration="3000">
                 <div class="text-center">
                   <div class="">
-                    <img src="../image/tentang/icon-tentang-professional.png" class="mb-4" alt="">
+                    <img src="../image/tentang/icon-tentang-professional.png" class="img-tentang-keunggulan mb-4" alt="">
                   </div>
                   <div class="">
                     <p class="heading-text-three text-white f-w-700">Professional</p>
@@ -421,7 +421,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
