--- a/pages/ads.html
+++ b/pages/ads.html
@@ -490,8 +490,8 @@
               <div class="col-md-6" data-aos="fade-up">
                 <div class="p-lg-5 mb-5">
                   <div class="mb-3">
-                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Consultation Our Team</p>
-                    <h6 class="app-primary-dua-0 f-w-700">Let's Start Talking With us 😊</h6>
+                    <p class="paragraph-text-two app-primary-dua-0 f-w-400 mb-3">Konsultasi tim kami</p>
+                    <h6 class="app-primary-dua-0 f-w-700">Ayo mulai lakukan perubahan 😊</h6>
                   </div>
                   <div class="mb-5">
                     <div class="card-contact mb-3">
@@ -500,7 +500,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
@@ -516,12 +516,12 @@
                       <div class="m-4 align-middle">
                         <div class="group-image-hero">
                           <div class="count-image-1">
-                            <p id="num" data-val="120" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">000</p>
+                            <p id="num" data-val="20" class="heading-text-three app-primary-dua-100 f-w-700 mb-1">00</p>
                           </div>
                         </div>
                       </div>
                       <div class="m-3 align-middle">
-                        <p class="paragraph-text-three app-base-40 mb-0">Customer is very happy </p>
+                        <p class="paragraph-text-three app-base-40 mb-0">Penilaian pelanggan</p>
                       </div>
                       <div class="m-2 align-middle">
                         <svg width="124" height="35" viewBox="0 0 124 35" fill="none" xmlns="http://www.w3.org/2000/svg">
