--- a/pages/blog-detail.html
+++ b/pages/blog-detail.html
@@ -99,7 +99,7 @@
                         <div class="col-md-12">
                             <div class="text-center mb-5" data-aos="fade-up">
                                 <div class="grup-back-to-blog d-flex">
-                                    <a class="heading-text-one-20 app-primary-dua-0 f-w-700" href=""><i class="fa-solid fa-arrow-left"></i> Back to Blog</a>
+                                    <a href="../pages/blog.html" class="heading-text-one-20 app-primary-dua-0 f-w-700"><i class="fa-solid fa-arrow-left"></i> Back to Blog</a>
                                 </div>
                                 <p class="heading-text-three app-primary-dua-0 f-w-700 mb-3">Product</p>
                                 <p class="heading-text-one-40 app-primary-dua-0 f-w-700 mb-3">Money Fast</p>
@@ -204,7 +204,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
