--- a/pages/blog.html
+++ b/pages/blog.html
@@ -106,10 +106,10 @@
                 </div>
             </div>
             <div class="group-image-hero">
-                <div class="count-image-bulat-blog" data-aos="fade-up">
+                <div class="count-image-bulat-blog">
                     <img src="../image/blog/bg-bulat-blog.png" class="img-fluid w-100" alt="">
                 </div>
-                <div class="count-image-titik-blog" data-aos="fade-up">
+                <div class="count-image-titik-blog">
                     <img src="../image/blog/bg-titik-blog.png" class="img-fluid w-100" alt="">
                 </div>
               </div>
@@ -316,7 +316,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
