--- a/pages/contact.html
+++ b/pages/contact.html
@@ -137,7 +137,7 @@
                               <div class="col-md-6">
                                   <div class="mb-5">
                                       <form action="">
-                                        <label for="validationServer01" class="form-label">First name</label>
+                                        <label for="validationServer01" class="form-label f-w-700 mb-2">First name</label>
                                         <input type="text" class="form-control form-control-first-name" id="validationServer01" value="Your first name" required>
                                         <div class="valid-feedback">
                                           Looks good!
@@ -147,7 +147,7 @@
                               </div>
                               <div class="col-md-6">
                                   <div class="mb-5">
-                                    <label for="validationServer02" class="form-label">Last name</label>
+                                    <label for="validationServer02" class="form-label f-w-700 mb-2">Last name</label>
                                     <input type="text" class="form-control form-control-last-name" id="validationServer02" value="Your first name" required>
                                     <div class="valid-feedback">
                                       Looks good!
@@ -156,7 +156,7 @@
                               </div>
                               <div class="col-md-12">
                                   <div class="mb-5">
-                                    <label for="validationCustom02" class="form-label">Company Name</label>
+                                    <label for="validationCustom02" class="form-label f-w-700 mb-2">Company Name</label>
                                     <input type="text" class="form-control form-control-company-name" id="validationCustom03" value="Your company name" required>
                                     <div class="valid-feedback">
                                       Looks good!
@@ -165,21 +165,22 @@
                               </div>
                               <div class="col-md-12">
                                   <div class="mb-5">
-                                    <label for="floatingInput">Email</label>
+                                    <label for="floatingInput" class="form-label f-w-700 mb-2">Email</label>
                                     <input type="email" class="form-control form-control-email" id="floatingInput" placeholder="hello@fan.com">
                                   </div>
                               </div>
                               <div class="col-md-12">
                                 <form>
                                   <div class="input-group mb-5">
-                                    <input type="tel" class="form-control form-control-tel">
+                                    <label for="floatingInput" class="form-label f-w-700 mb-2">Phone Number</label>
+                                    <input type="number" class="form-control form-control-tel">
                                     <!-- <span class="input-group-addon">Tel</span> -->
                                   </div>
                                 </form>
                               </div>
                               <div class="col-md-12">
                                   <div class="mb-5">
-                                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                                    <label for="exampleFormControlTextarea1" class="form-label f-w-700 mb-2">Message</label>
                                     <textarea class="form-control form-control-message" id="exampleFormControlTextarea1" rows="3"></textarea>
                                   </div>
                               </div>
@@ -190,7 +191,7 @@
                                       <label class="form-check-label" for="exampleCheck1"></label>
                                       <p class="paragraph-text-one-15 app-primary-dua-0 f-w-400 mb-5">I’d like to receive more information about company, I understandand <br> agree to the <span class="f-w-700">Privacy Policy</span></p>
                                     </div>
-                                      <button class="btn btn-contact-cs">Send Message</button>
+                                      <a href="mailto:" class="btn btn-contact-cs">Send Message</a>
                                   </div>
                               </div>
                           </div>
@@ -314,48 +315,22 @@
 
 
 
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2//2.0.0-beta.2.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="../js/countDown.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/8.4.7/js/intlTelInput.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
       AOS.init();
     </script>
-    <script type="text/javascript">
-            var owl = $('.owl-carousel');
-            owl.owlCarousel({
-                items:5,
-                loop:true,
-                margin:35,
-                autoplay:true,
-                autoplayTimeout:1000,
-                autoplayHoverPause:true,
-                responsive:{
-                      0:{
-                          items:1
-                      },
-                      600:{
-                          items:3
-                      },
-                      1000:{
-                          items:5
-                      }
-                  }
-            });
-            $('.play').on('click',function(){
-                owl.trigger('play.owl.autoplay',[1000])
-            })
-            $('.stop').on('click',function(){
-                owl.trigger('stop.owl.autoplay')
-            })
-    </script>
     <script>
         $(".form-control-tel").intlTelInput({
-          utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/8.4.6/js/utils.js"
+          utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/8.4.6/js/utils.js",
+          preferredCountries: ["id", "gb"],
+          autoHideDialCode: false,
+          nationalMode: true,
+          responsiveDropdown: true,
+          autoFormat: true
         });
     </script>
   </body>
