--- a/pages/detailportofoliobrandes.html
+++ b/pages/detailportofoliobrandes.html
@@ -268,7 +268,7 @@
                               <img src="../image/tentang/image-portofolio-4.png" class="img-portfolio-2" alt="">
                               <div class="card-bdoy">
                                 <div class="group-text-portfolio p-3">
-                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">Go Ticket</p>
                                   <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
                                   <a href="#" class="link-read-more paragraf-text-tree">
                                     <div class="group-read-more-in-blog">
@@ -289,7 +289,7 @@
                               <img src="../image/tentang/image-portofolio-5.png" class="img-portfolio-2" alt="">
                               <div class="card-bdoy">
                                 <div class="group-text-portfolio p-3">
-                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">FAN Social Media</p>
+                                  <p class="heading-text-one app-primary-dua-0 f-w-700 mb-3">UWWWO</p>
                                   <p class="paragraph-text-one app-primary-dua-0 f-w-400 mb-4">Branding Design</p>
                                   <a href="#" class="link-read-more paragraf-text-tree">
                                     <div class="group-read-more-in-blog">
@@ -334,7 +334,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
