--- a/pages/detailportofoliososmed.html
+++ b/pages/detailportofoliososmed.html
@@ -334,7 +334,7 @@
                         <div class="group-card-contact">
                           <p class="heading-text-three app-text-20 f-w-400 mb-3">+62 8953 3100 1831</p>
                           <div class="group-button-contact">
-                            <button class="btn btn-contact"><a class="link-contact" href="">Contact</a></button>
+                            <button class="btn btn-contact"><a class="link-contact" href="https://api.whatsapp.com/send?phone=">Contact</a></button>
                           </div>
                         </div>
                       </div>
@@ -447,7 +447,7 @@
                 </div>
               </div>
               <div class="col-md-12" data-aos="fade-up">
-                <div class="text-center">
+                <div class="text-center mb-5">
                   <img src="../image/home/bg-partnertship.png" class="img-fluid" alt="">
                 </div>
                 <div class="text-center">
